--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.13.0",
+    "react-html-parser": "^2.0.2",
     "react-icons-kit": "^1.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
